CSS: Fix overlapping link when flash message is displayed

--- a/app/assets/stylesheets/admin/page-applications.scss
+++ b/app/assets/stylesheets/admin/page-applications.scss
@@ -557,6 +557,10 @@
       display: inline;
     }
   }
+  
+  .alert ~ form > .form-edit-link {
+    top: pxToRem(40);
+  }
 }
 
 .centered {
